# SnakeCPP

./: CMakeLists.txt
src/: main.cpp
